# GBA-Emulator

./: .gitignore  CMakeLists.txt  README.md
include/: cart.h  common.h  cpu.h  emu.h  ram.h
src/: cart.c  cpu.c  emu.c  main.c  ram.c
